@@ -2032,4 +2032,106 @@ this repository contains the full copyright notices and license terms. -->
             <field name="aeat340_default_in_book_key" ref="aeat_340_key_R"/>
         </record>
     </data>
+    <data depends="account_es" grouped="1">
+        <record model="aeat.340.type-account.tax.template" id="aeat_340_template_type_iva_rep_4+re_05_iva_child_E">
+            <field name="tax" ref="account_es.iva_rep_4+re_05_iva_child"/>
+            <field name="aeat_340_type" ref="aeat_340_key_E"/>
+        </record>
+        <record model="account.tax.template" id="account_es.iva_rep_4+re_05_iva_child">
+            <field name="aeat340_default_out_book_key" ref="aeat_340_key_E"/>
+        </record>
+        <record model="aeat.340.type-account.tax.template" id="aeat_340_template_type_iva_rep_7+re_1_iva_child_E">
+            <field name="tax" ref="account_es.iva_rep_7+re_1_iva_child"/>
+            <field name="aeat_340_type" ref="aeat_340_key_E"/>
+        </record>
+        <record model="account.tax.template" id="account_es.iva_rep_7+re_1_iva_child">
+            <field name="aeat340_default_out_book_key" ref="aeat_340_key_E"/>
+        </record>
+        <record model="aeat.340.type-account.tax.template" id="aeat_340_template_type_iva_rep_8+re_1_iva_child_E">
+            <field name="tax" ref="account_es.iva_rep_8+re_1_iva_child"/>
+            <field name="aeat_340_type" ref="aeat_340_key_E"/>
+        </record>
+        <record model="account.tax.template" id="account_es.iva_rep_8+re_1_iva_child">
+            <field name="aeat340_default_out_book_key" ref="aeat_340_key_E"/>
+        </record>
+        <record model="aeat.340.type-account.tax.template" id="aeat_340_template_type_iva_rep_10+re_14_iva_child_E">
+            <field name="tax" ref="account_es.iva_rep_10+re_14_iva_child"/>
+            <field name="aeat_340_type" ref="aeat_340_key_E"/>
+        </record>
+        <record model="account.tax.template" id="account_es.iva_rep_10+re_14_iva_child">
+            <field name="aeat340_default_out_book_key" ref="aeat_340_key_E"/>
+        </record>
+        <record model="aeat.340.type-account.tax.template" id="aeat_340_template_type_iva_rep_16+re_4_iva_child_E">
+            <field name="tax" ref="account_es.iva_rep_16+re_4_iva_child"/>
+            <field name="aeat_340_type" ref="aeat_340_key_E"/>
+        </record>
+        <record model="account.tax.template" id="account_es.iva_rep_16+re_4_iva_child">
+            <field name="aeat340_default_out_book_key" ref="aeat_340_key_E"/>
+        </record>
+        <record model="aeat.340.type-account.tax.template" id="aeat_340_template_type_iva_rep_18+re_4_iva_child_E">
+            <field name="tax" ref="account_es.iva_rep_18+re_4_iva_child"/>
+            <field name="aeat_340_type" ref="aeat_340_key_E"/>
+        </record>
+        <record model="account.tax.template" id="account_es.iva_rep_18+re_4_iva_child">
+            <field name="aeat340_default_out_book_key" ref="aeat_340_key_E"/>
+        </record>
+        <record model="aeat.340.type-account.tax.template" id="aeat_340_template_type_iva_rep_21+re_52_iva_child_E">
+            <field name="tax" ref="account_es.iva_rep_21+re_52_iva_child"/>
+            <field name="aeat_340_type" ref="aeat_340_key_E"/>
+        </record>
+        <record model="account.tax.template" id="account_es.iva_rep_21+re_52_iva_child">
+            <field name="aeat340_default_out_book_key" ref="aeat_340_key_E"/>
+        </record>
+    </data>
+    <data depends="account_es_pyme" grouped="1">
+        <record model="aeat.340.type-account.tax.template" id="aeat_340_template_type_iva_pymes_rep_4+re_pymes_05_iva_child_E">
+            <field name="tax" ref="account_es_pyme.iva_pymes_rep_4+re_pymes_05_iva_child"/>
+            <field name="aeat_340_type" ref="aeat_340_key_E"/>
+        </record>
+        <record model="account.tax.template" id="account_es_pyme.iva_pymes_rep_4+re_pymes_05_iva_child">
+            <field name="aeat340_default_out_book_key" ref="aeat_340_key_E"/>
+        </record>
+        <record model="aeat.340.type-account.tax.template" id="aeat_340_template_type_iva_pymes_rep_7+re_pymes_1_iva_child_E">
+            <field name="tax" ref="account_es_pyme.iva_pymes_rep_7+re_pymes_1_iva_child"/>
+            <field name="aeat_340_type" ref="aeat_340_key_E"/>
+        </record>
+        <record model="account.tax.template" id="account_es_pyme.iva_pymes_rep_7+re_pymes_1_iva_child">
+            <field name="aeat340_default_out_book_key" ref="aeat_340_key_E"/>
+        </record>
+        <record model="aeat.340.type-account.tax.template" id="aeat_340_template_type_iva_pymes_rep_8+re_pymes_1_iva_child_E">
+            <field name="tax" ref="account_es_pyme.iva_pymes_rep_8+re_pymes_1_iva_child"/>
+            <field name="aeat_340_type" ref="aeat_340_key_E"/>
+        </record>
+        <record model="account.tax.template" id="account_es_pyme.iva_pymes_rep_8+re_pymes_1_iva_child">
+            <field name="aeat340_default_out_book_key" ref="aeat_340_key_E"/>
+        </record>
+        <record model="aeat.340.type-account.tax.template" id="aeat_340_template_type_iva_pymes_rep_10+re_pymes_14_iva_child_E">
+            <field name="tax" ref="account_es_pyme.iva_pymes_rep_10+re_pymes_14_iva_child"/>
+            <field name="aeat_340_type" ref="aeat_340_key_E"/>
+        </record>
+        <record model="account.tax.template" id="account_es_pyme.iva_pymes_rep_10+re_pymes_14_iva_child">
+            <field name="aeat340_default_out_book_key" ref="aeat_340_key_E"/>
+        </record>
+        <record model="aeat.340.type-account.tax.template" id="aeat_340_template_type_iva_pymes_rep_16+re_pymes_4_iva_child_E">
+            <field name="tax" ref="account_es_pyme.iva_pymes_rep_16+re_pymes_4_iva_child"/>
+            <field name="aeat_340_type" ref="aeat_340_key_E"/>
+        </record>
+        <record model="account.tax.template" id="account_es_pyme.iva_pymes_rep_16+re_pymes_4_iva_child">
+            <field name="aeat340_default_out_book_key" ref="aeat_340_key_E"/>
+        </record>
+        <record model="aeat.340.type-account.tax.template" id="aeat_340_template_type_iva_pymes_rep_18+re_pymes_4_iva_child_E">
+            <field name="tax" ref="account_es_pyme.iva_pymes_rep_18+re_pymes_4_iva_child"/>
+            <field name="aeat_340_type" ref="aeat_340_key_E"/>
+        </record>
+        <record model="account.tax.template" id="account_es_pyme.iva_pymes_rep_18+re_pymes_4_iva_child">
+            <field name="aeat340_default_out_book_key" ref="aeat_340_key_E"/>
+        </record>
+        <record model="aeat.340.type-account.tax.template" id="aeat_340_template_type_iva_pymes_rep_21+re_pymes_52_iva_child_E">
+            <field name="tax" ref="account_es_pyme.iva_pymes_rep_21+re_pymes_52_iva_child"/>
+            <field name="aeat_340_type" ref="aeat_340_key_E"/>
+        </record>
+        <record model="account.tax.template" id="account_es_pyme.iva_pymes_rep_21+re_pymes_52_iva_child">
+            <field name="aeat340_default_out_book_key" ref="aeat_340_key_E"/>
+        </record>
+    </data>
 </tryton>
