@@ -1,3 +1,4 @@
+* Set AEAT 340 fields to account_es and account_es_pyme tax templates
 * Set values to invoice_number, record_number, issued_invoice_count and
   record_count and add suport for operation key B
 * Create report lines ordered by issue date
